@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 41703de3f071fe1977bc72eb8d9019914de05f6c ChangeLog
+SHA1 eb16da3d39327678e7f6badbb729145915cbc130 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 24850c813c912fd2fc54e5cde5114387afde7fd7 META.yml
-SHA1 f7bd5fdb6b0a3cf4117fc3256ef4ab063cd1f62a Makefile.PL
+SHA1 53c916cc724387b594563930376960eb27472f5a META.yml
+SHA1 9c9d6f0a1d5685e688d236d197360286165f3641 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 5cf8c10725cfcb091bd7368237627b6ea8407984 lib/Net/FullAuto.pm
+SHA1 c351dbb0ba4576285aceffc4c2e38d5a4ac39ac4 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -58,17 +58,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 791fcade67c31ddfdc330f7bfcd0bd3f24e2eceb lib/Net/FullAuto/FA_Core.pm
+SHA1 c53d67adc5416712d048e8d18d915536bf220cf6 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTsrWfAAoJEBa/9Pad787E6/AIAOEMkbR+Q2DOOcqzTmAqbVsP
-iNLyN05H5CdWW1oGfTjsEWREJfxdec1KGoV36y31gA5IWu2pJjHHmTnIqGAHMyg+
-mzul0UG7TXwHSwIPSsb8AFtLgCYW4IXuTliD9jkKDG178NKfUlbRobGbD0rnQYyZ
-3YFHQLWrZsOR+IxvG39E4Ya7r7Znw3oy1iCT2tAgcWOBRwbSDZnYIR83a4ijS076
-W3VZkkmvPJTeqZ3+7gE9g5YdlkdbBlvvOwAQz0HzL6024q5D5AGy8NFe/NvPSgzj
-eisEOwbmu8W6Gm2oZY9KoEJAlum7STUgJGWuW3URH02goS7SD5s9I/h+SLjKmfI=
-=F9jj
+iQEcBAEBAgAGBQJTs2n2AAoJEBa/9Pad787EFJUH/23DMNP7F5hni92q5KQ0zRmJ
+41mIvRvAqNTkXWJdM3wXjuav+ueX69oQ+GBqnXbenZKJEMAZEqHK7hyiPdsjJSix
+c+Y5EYLAu3ycJd3ErkkaqWSFdl7TdXdwV6zGtcf6jkxcrlKfeCA0HxchtojfhON8
+JishmAeLgeGFTk/qQ+UDN3JG8pD5cx2+7pe+mdngCqqAvcuCYZTVJpPPNM/XVTSK
+AYp10h/+arVk1BMd9F8Cm/Hti7vhMtWK7RjimPtoRSozqeBiwu8bvvgKwNBpiVqe
+cxX3voVYjYSoVDfhPwycyw3BFfDglEHkwG4w2Cgcp6cuj9hRmwYp0VEf4t/GCZk=
+=7DJz
 -----END PGP SIGNATURE-----
