@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999930';
+our $VERSION='0.9999999931';
 
 
 use 5.005;
