@@ -11,13 +11,20 @@
 #    This program is distributed in the hope that it will be useful,
 #    but **WITHOUT ANY WARRANTY**; without even the implied warranty of
 #    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU Affero General Public License for more details.
+#    GNU Affero General Public License for more ietails.
 #
 #    You should have received a copy of the GNU Affero General Public
 #    License along with this program.  If not, see:
 #    <http://www.gnu.org/licenses/agpl.html>.
 #
 #######################################################################
+
+
+2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9999999931 released.
+
+        * Fixed logout of localhost handle.
 
 
 2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
